@@ -1,3 +1,10 @@
+2002-01-19  Seth Nickell  <snickell@stanford.edu>
+
+	* Makefile.am:
+
+	Install icon into the standard pixmaps directory
+	so that Panel & Nautilus will pick up on it.
+
 2002-01-14  Bradford Hovinen  <hovinen@ximian.com>
 
 	* Makefile.am (bin_PROGRAMS): Rename binary
